# python-svdata

./: .readthedocs.yaml  Cargo.toml  README.md  noxfile.py  pyproject.toml  python_svdata.pyi
.github/: dependabot.yml
.github/workflows/: CI.yml
docs/source/: conf.py  index.rst
src/: lib.rs  structures.rs  sv_instance.rs  sv_misc.rs  sv_module.rs  sv_package.rs  sv_port.rs  sv_primlit.rs  sv_primlit_integral.rs
tests/python/: test_ansi_module.py
tests/systemverilog/: ansi_module.sv
