[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "python-svdata"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]



[project.optional-dependencies]
dev = [
  "isort == 5.12.0",
  "black == 23.1.0",
  "mypy == 1.1.1",
  "nox == 2022.11.21",
  "pytest == 7.2.2",
  "flake8 == 6.0.0",
  "flake8-bugbear == 23.2.13",
  "flake8-comprehensions == 3.10.1",
  "pep8-naming == 0.13.3",
  "pyproject-flake8 == 6.0.0.post1",
  "pytest-cov == 4.0.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.mypy]
disable_error_code = "misc"
strict = true

[tool.flake8]
exclude = "venv,.nox,docs"
extend-ignore = ["E203"]
extend-immutable-calls = ["Argument"]
max-doc-length = 72
max-line-length = 99

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.isort]
force_sort_within_sections = true
line_length = 99
profile = "black"
skip_gitignore = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests/python",
]